# sonogram

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  Makefile.usage.txt  NOTICE  README.md
source/: CMakeLists.txt  README.md  main.cxx
source/compiler/: compiler.cxx  generate.cxx  transfer.cxx
source/face/: CMakeLists.txt  app.hxx
source/face/app/: alias.hxx  lexer.hxx  limits.hxx
source/face/app/lexer/: token.hxx
source/face/app/utility/: error.hxx  print.hxx
source/face/dirty/: compiler.hxx  parser.hxx
source/impl/: CMakeLists.txt  lexer.cxx
source/impl/lexer/: scan.cxx  token.cxx
source/impl/utility/: error.cxx  print.cxx
source/include/: app.hxx
source/include/app/: alias.hxx  compiler.hxx  generator.hxx  limits.hxx  parser.hxx  tokenizer.hxx
source/include/app/tokenizer/: token.hxx
source/include/app/utility/: error.hxx  print.hxx
source/tokenizer/: token.cxx  tokenizer.cxx
source/utility/: error.cxx  print.cxx
